<resources>
    <string name="app_name">MisContactos</string>
    <string name="nombre">Luis Benitez</string>
    <string name="telefono">315960144</string>
    <string name="email">luisbenitez@mail.com</string>

    <!--Vamos a declarar los string que la actividad principal (lista de contactos)
     nos pasa como parametros al dar click sobre un elemento,
     estos seran los que mostraremos en la actividad de detalle-->
    <string name="pnombre">nombre</string>
    <string name="ptelefono">telefono</string>
    <string name="pemail">email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mio">mio</string>

    <string name="plikes">0 Likes</string>

</resources>
