<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvContacto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    card_view:cardCornerRadius="@dimen/bordes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_recycler">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="@dimen/img_ancho"
            android:layout_height="wrap_content"
            android:src="@drawable/user"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"/>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btnLike"
                android:layout_width="@dimen/image_buton"
                android:layout_height="@dimen/image_buton"
                android:scaleType="centerCrop"
                android:src="@drawable/like"
                android:layout_alignParentStart="true"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/tvNombreCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pnombre"
                    android:textSize="@dimen/nombre_cardview"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvTelefonoCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ptelefono"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plikes"
                android:textSize="@dimen/nombre_cardview"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>